--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -660,6 +660,12 @@ This will also address the naming of types such as registrar.
 - by the end of this refactor, cpp and csharp should contain only the
   formatters.
 
+*** Allow generating executables from dogen                           :story:
+
+At present dogen always assumes we want to generate a static
+library. It would be nice to be able to generate an executable too,
+with all of the cmake infrastructure generated.
+
 *** Make visitor an explicit type                                     :story:
 
 Instead of automatically generating visitors via the visitable
@@ -4710,6 +4716,50 @@ suitable in documentation:
 - *End Marker*: #>. Can also be specialised to "end X marker",
   e.g. end directive marker is #>.
 
+*** Consider removing filtering ostream                               :story:
+
+Originally we added a boost based stream to handle
+indentation. However, since we moved over to stitch, there probably is
+no need to use it any longer. We need to investigate if the formatters
+model is making use of it (generating comments, namespaces, etc). If
+not, remove it.
+
+*** Sequences that support multiple postfixes                         :story:
+
+In C# we encountered what is probably a new use case for sequences: a
+single sequence with two different postfixes, depending on the element
+we're processing. We solved the problem by using two separate
+sequences, with lots of copy and paste and duplication. However, a
+more elegant solution is to allow "indices" for the configuration,
+e.g. instead of:
+
+:                dogen::formatters::sequence_formatter sf1(o.local_attributes().size());
+:                dogen::formatters::sequence_formatter sf2(o.local_attributes().size());
+:                sf1.element_separator("");
+:                sf2.element_separator("");
+:                sf1.postfix_configuration().not_last(", true/*withSeparator*/");
+:                sf2.postfix_configuration().not_last("   ");
+:                sf1.postfix_configuration().last("");
+:                sf2.postfix_configuration().last("");
+
+We'd do:
+
+:                dogen::formatters::sequence_formatter sf(o.local_attributes().size());
+:                sf.element_separator("");
+:                sf.postfix_configuration(0).not_last(", true/*withSeparator*/");
+:                sf.postfix_configuration(1).not_last("   ");
+:                sf.postfix_configuration(0).last("");
+:                sf.postfix_configuration(1).last("");
+
+And then, we'd use it as:
+
+: sf1.postfix(0)
+
+and so forth.
+
+We lost the C# use case for this though, as we managed to make the API
+symmetric for both use cases.
+
 ** In the medium term
 
 The release will not be made unless these stories are closed, but we
@@ -8041,7 +8091,7 @@ able to serialise across languages. This could be done as follows:
 This is a common pattern is C++. However, its not yet clear how this
 would work with regular domain types.
 
-*** Add "is abstract" to yarn                                         :story:
+*** Add "is abstract" to coding                                       :story:
 
 With C# we have started deciding if a class is abstract or not on the
 basis of whether its a parent, etc. The right thing to do is to have a
@@ -8711,38 +8761,6 @@ Tasks:
 Note: the sample principles probably apply for code generating the
 container.
 
-*** Load system models intelligently                                   :epic:
-
-#+begin_quote
-*Story*: As a dogen user, I want to load only the system models
-required for the model I want to generate so that generation is as
-quick as possible.
-#+end_quote
-
-At present we are loading all library models. This is not a problem
-because they are small and there are only a few of them. However, in a
-distant future, one can imagine a very large number of system models,
-each of which with large number of types (say the C# system models,
-the C++ system models, etc). In this world we may need to disable the
-loading of some system models: either by programming language or more
-explicitly by choosing individual models in a given language.
-
-It may even make more sense to load just what is required: load the
-target model, infer all of its dependencies (including at the
-programming language level) and then load only the system models that
-are required for those languages.
-
-This may not be as hard as it seems: we already infer that all models
-the target depends on are present by looking at the list of distinct
-model names required by the target qualified names. We could use the
-same logic to determine what system models to load. The only exception
-is the hardware model, which must always be loaded (or we need some
-kind of mapping between "empty" model name and the hardware model).
-
-We should keep in mind the model groups too; not all models are
-applicable to all model groups. We should only consider compatible
-models.
-
 *** Consider adding facet specific types                               :epic:
 
 #+begin_quote
@@ -9048,7 +9066,6 @@ Links:
 - [[https://stackoverflow.com/questions/36937912/specializing-boostlexical-cast-for-enums-in-boostproperty-maps][specializing boost::lexical_cast for enums in boost::property_maps]]
 - [[https://stackoverflow.com/questions/28828957/enum-to-string-in-modern-c11-c14-c17-and-future-c20][enum to string in modern C++11 / C++14 / C++17 and future C++20]]
 - [[https://stackoverflow.com/questions/21295935/can-a-c-enum-class-have-methods][Can a C++ enum class have methods?]]
-
 
 *** Allow renaming =invalid= enumerator                               :story:
 
@@ -9384,6 +9401,10 @@ this (node, nested qname, etc).
 
 This would be part of the injection framework.
 
+Links:
+
+- [[https://en.wikipedia.org/wiki/Composite_pattern][Composite pattern]]
+
 *** Add support for bitsets                                           :story:
 
 #+begin_quote
@@ -9511,7 +9532,7 @@ that tells dogen what string to use for debug dumping. At present
 enumerators do not have dynamic extensions support so we need to add
 it too (e.g. add the concept to them).
 
-*** Add is comparable to yarn                                         :story:
+*** Add is comparable to coding                                       :story:
 
 #+begin_quote
 *Story*: As a dogen user, I want to define types as comparable so that
@@ -9835,6 +9856,18 @@ This should be sufficient for services. At present we have a hack that
 allows functions without any template arguments, e.g. =std::function=,
 in services.
 
+One possible solution is to support the "portable syntax" as per
+=boost::function=, .e.g. =std::function<a, b, c>=. This would make it
+similar to what we already do for variants. The only other problem is
+that we would not be able to support const, by ref etc. Yet another
+solution is to have an operation syntax in UML but somehow convert the
+operation into a type. For example, we could have a =masd::function=
+stereotype, which is applied to an object that can only have a single
+operation. Then you can refer to that as an attribute. The
+implementation is dependent on the programming language. This could be
+a LAM type. This solves the parsing issues, and gives us strong
+metamodel level support for these types.
+
 *** Add support for references and pointers to types                  :story:
 
 #+begin_quote
@@ -9865,6 +9898,11 @@ make the parser more clever:
 
 We should try to create tests for all the cases we consider important
 and mark them as ignore until we can find a spirit expert to help out.
+
+Actually the right approach is to rely on UMLs facilities for these
+such as =inout= etc. We should not have programming language level
+constructs for these. In addition, for raw pointers we could create a
+type, e.g. =masd::pointer= which is used to signify this intention.
 
 *** Add support for default values                                    :story:
 
@@ -10031,7 +10069,6 @@ Links:
 - [[https://github.com/erikvalkering/smartref][GitHub]]
 - [[https://medium.com/@eejv/on-the-origin-of-smartref-proxy-pattern-f6fe53f41286][On the Origin of smartref: Proxy Pattern]]
 
-
 *** Add support for MetaStuff                                         :story:
 
 Interesting serialisation library:
@@ -10130,56 +10167,6 @@ can create code to interface with legacy systems.
 
 We should investigate how hard it is to add support for these IDLs.
 
-
-** Useful improvements but lacking use cases
-
-This bucket contains stories with ideas that have potential but for
-which we do not currently have a use case.
-
-*** Consider removing filtering ostream                               :story:
-
-Originally we added a boost based stream to handle
-indentation. However, since we moved over to stitch, there probably is
-no need to use it any longer. We need to investigate if the formatters
-model is making use of it (generating comments, namespaces, etc). If
-not, remove it.
-
-*** Sequences that support multiple postfixes                         :story:
-
-In C# we encountered what is probably a new use case for sequences: a
-single sequence with two different postfixes, depending on the element
-we're processing. We solved the problem by using two separate
-sequences, with lots of copy and paste and duplication. However, a
-more elegant solution is to allow "indices" for the configuration,
-e.g. instead of:
-
-:                dogen::formatters::sequence_formatter sf1(o.local_attributes().size());
-:                dogen::formatters::sequence_formatter sf2(o.local_attributes().size());
-:                sf1.element_separator("");
-:                sf2.element_separator("");
-:                sf1.postfix_configuration().not_last(", true/*withSeparator*/");
-:                sf2.postfix_configuration().not_last("   ");
-:                sf1.postfix_configuration().last("");
-:                sf2.postfix_configuration().last("");
-
-We'd do:
-
-:                dogen::formatters::sequence_formatter sf(o.local_attributes().size());
-:                sf.element_separator("");
-:                sf.postfix_configuration(0).not_last(", true/*withSeparator*/");
-:                sf.postfix_configuration(1).not_last("   ");
-:                sf.postfix_configuration(0).last("");
-:                sf.postfix_configuration(1).last("");
-
-And then, we'd use it as:
-
-: sf1.postfix(0)
-
-and so forth.
-
-We lost the C# use case for this though, as we managed to make the API
-symmetric for both use cases.
-
 ** Tooling, infrastructure, blog posts, etc.
 
 Stuff that is not directly related to the problem domain but its
@@ -10207,45 +10194,6 @@ At present we are doing a lot of hacks for windows:
 Ideally we want to reuse the Travis BinTray descriptor but AppVeyor
 does not support this directly.
 
-*** Add prefetch support to ODB                                       :story:
-
-As per Boris email:
-
-#+begin_quote
-Hm, I am not sure the bulk approach (with a compiler-time pragma) is
-right in this case. There we don't really have a choice since we need
-to know the "batch buffer" size.
-
-But here it is all runtime. Plus, you may want to have different
-prefetch for different queries of the same object. In fact, you
-can already customize it for queries (but not for object loads)
-by using prepared queries (Section 4.5 in the manual):
-
-1. Create prepared query.
-
-2. Get its statement (statement()).
-
-3. Cast it to odb::oracle::select_statement.
-
-4. Call handle() on the result to get OCIStmt*.
-
-5. Set custom OCI_ATTR_PREFETCH_ROWS.
-
-6. Execute the query.
-
-The problems with this approach are: (1) it is tedious and (2) it
-doesn't work for non-query SELECT's (e.g., database::load()). So
-perhaps the way to do it is:
-
-1. Provide prefetch() functions on oracle::database() and
-   oracle::connection() that can be used to modify database-wide
-   and connection-wide prefetch values. Also set it to some
-   reasonable default (say 512?)
-
-2. Provide oracle::select_statement::prefetch() to make the
-   prepared query approach less tedious.
-#+end_quote
-
 *** Add support for ODB schema version                                :story:
 
 ODB has good support for schema migration. We need to make sure Dogen
@@ -10255,26 +10203,6 @@ Links:
 
 - [[https://www.codesynthesis.com/products/odb/doc/manual.xhtml][C++ Object Persistence with ODB]]: section "13.1 Object Model Version
   and Changelog" and "13.2 Schema Migration"
-
-*** Add ODB to the build machine                                      :story:
-
-At present we are only compiling and running the ODB tests
-locally. Now that ODB is becoming a core dependency, we need to make
-sure we are running these tests on the build machines - Windows and
-Linux at least.
-
-However, at present we are already running out of time for the main
-build. If we simply add ODB to Linux we will not complete the build in
-the allocated slot. One way to achieve this is to have a build that
-does ODB only.
-
-We should also add oracle OCI to the dogen dependencies package so
-that we test oracle support as well as postgres. However, to run the
-tests we need some way to configure postgres to allow connections. It
-is also possible to install oracle by copying the DEB to dropbox and
-creating a simple installation script that sets up the users etc. We
-could make similar scripts for postgres and oracle. However, we need
-to convert the oracle schema into postgres.
 
 *** Add proper DEB support to bintray                                 :story:
 
@@ -10293,111 +10221,6 @@ bintray, so that users can install Dogen from nuget. It should support
 MSIs - but if it doesn't we may need to manually package Dogen as a
 =nupkg=. This is not too difficult: we need the descriptor and some
 basic shell scripts.
-
-*** Windows build release test failures                               :epic:
-
-Dia tests:
-
-: [00:27:30] C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.CppCommon.targets(171,5): error MSB6006: "cmd.exe" exited with code -1073741515. [C:\projects\dogen\build\output\projects\dia\tests\run_dia.tests.vcxproj]
-
-Dia hydrator tests:
-
-: [00:27:31] unknown location : fatal error : in "modeline_group_hydrator_tests/hydrating_emacs_modeline_group_results_in_expected_modelines": class std::runtime_error: Error during test [C:\projects\dogen\build\output\projects\formatters\tests\run_formatters.tests.vcx
-: [00:27:31] proj]
-: [00:27:31]   C:\projects\dogen\projects\formatters\tests\modeline_group_hydrator_tests.cpp(142): last checkpoint: hydrating_emacs_modeline_group_results_in_expected_modelines
-: [00:27:31]
-: [00:27:31]   *** 1 failure is detected in the test module "formatters_tests"
-
-Knit:
-
-: [00:27:35] C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.CppCommon.targets(171,5): error MSB6006: "cmd.exe" exited with code -1073741515. [C:\projects\dogen\build\output\projects\knit\tests\run_knit.tests.vcxproj]
-: [00:27:35] Done Building Project "C:\projects\dogen\build\output\projects\knit\tests\run_knit.tests.vcxproj" (default targets) -- FAILED.
-
-Stitch:
-: [00:27:36]   C:\projects\dogen\projects\utility\src\test_data\validating_resolver.cpp(39): Throw in function class boost::filesystem::path __cdecl dogen::utility::test_data::validating_resolver::resolve(class boost::filesystem::path)
-: [00:27:36]   Dynamic exception type: class boost::exception_detail::clone_impl<class dogen::utility::filesystem::file_not_found>
-: [00:27:36]   std::exception::what: File not found: C:\projects\dogen\build\output\bin\../test_data\stitch/input/simple_template.stitch
-: [00:27:36] unknown location : fatal error : in "workflow_tests/simple_template_results_in_expected_output": class std::runtime_error: Error during test [C:\projects\dogen\build\output\projects\stitch\tests\run_stitch.tests.vcxproj]
-: [00:27:36]   C:\projects\dogen\projects\stitch\tests\workflow_tests.cpp(48): last checkpoint: simple_template_results_in_expected_output
-: [00:27:36]
-: [00:27:36]   C:\projects\dogen\projects\utility\src\test_data\validating_resolver.cpp(39): Throw in function class boost::filesystem::path __cdecl dogen::utility::test_data::validating_resolver::resolve(class boost::filesystem::path)
-: [00:27:36]   Dynamic exception type: class boost::exception_detail::clone_impl<class dogen::utility::filesystem::file_not_found>
-: [00:27:36]   std::exception::what: File not found: C:\projects\dogen\build\output\bin\../test_data\stitch/input/complex_template.stitch
-: [00:27:36]
-: [00:27:36]   C:\projects\dogen\projects\utility\src\test_data\validating_resolver.cpp(39): Throw in function class boost::filesystem::path __cdecl dogen::utility::test_data::validating_resolver::resolve(class boost::filesystem::path)
-: [00:27:36]   Dynamic exception type: class boost::exception_detail::clone_impl<class dogen::utility::filesystem::file_not_found>
-: [00:27:36]   std::exception::what: File not found: C:\projects\dogen\build\output\bin\../test_data\stitch/input/empty_template.stitch
-: [00:27:36]
-: [00:27:36]   *** 3 failures are detected in the test module "stitch_tests"
-<snip>
-
-Test model sanitizer:
-
-: [00:27:39]   CMake does not need to re-run because C:\projects\dogen\build\output\projects\test_models\test_model_sanitizer\tests\CMakeFiles\generate.stamp is up-to-date.
-: [00:27:39]   Running 127 test cases...
-: [00:27:39] C:/projects/dogen/projects/utility/include/dogen/utility/test/hash_tester.hpp(57): error : in "std_model_tests/validate_hashing": check hasher(a) == hasher(b) has failed [C:\projects\dogen\build\output\projects\test_models\test_model_sanitizer\tests\run_test_model_sanitizer.tests.vcxproj]
-: [00:27:39] C:/projects/dogen/projects/utility/include/dogen/utility/test/hash_tester.hpp(57): error : in "std_model_tests/validate_hashing": check hasher(a) == hasher(b) has failed [C:\projects\dogen\build\output\projects\test_models\test_model_sanitizer\tests\run_te
-: [00:27:39] st_model_sanitizer.tests.vcxproj]
-: [00:27:40]
-: [00:27:40]   *** 2 failures are detected in the test module "test_model_sanitizer_tests"
-
-Yarn.dia:
-
-: [00:27:42]   C:\projects\dogen\projects\utility\src\test_data\validating_resolver.cpp(39): Throw in function class boost::filesystem::path __cdecl dogen::utility::test_data::validating_resolver::resolve(class boost::filesystem::path)
-: [00:27:42]   Dynamic exception type: class boost::exception_detail::clone_impl<class dogen::utility::filesystem::file_not_found>
-: [00:27:42]   std::exception::what: File not found: C:\projects\dogen\build\output\bin\../test_data\yarn.dia/expected/class_in_a_package.diaxml
-: [00:27:42] unknown location : fatal error : in "workflow_tests/class_in_a_package_dia_transforms_into_expected_yarn": class std::runtime_error: Error during test [C:\projects\dogen\build\output\projects\yarn.dia\tests\run_yarn.dia.tests.vcxproj]
-: [00:27:42]   C:\projects\dogen\projects\yarn.dia\tests\workflow_tests.cpp(85): last checkpoint: class_in_a_package_dia_transforms_into_expected_yarn
-
-Yarn.Json
-
-: [00:27:42]   Building Custom Rule C:/projects/dogen/projects/yarn.json/tests/CMakeLists.txt
-: [00:27:42]   CMake does not need to re-run because C:\projects\dogen\build\output\projects\yarn.json\tests\CMakeFiles\generate.stamp is up-to-date.
-: [00:27:42]   Running 12 test cases...
-: [00:27:42]
-: [00:27:42]   C:\projects\dogen\projects\yarn.json\src\types\hydrator.cpp(251): Throw in function class dogen::yarn::intermediate_model __cdecl dogen::yarn::json::hydrator::hydrate(class std::basic_istream<char,struct std::char_traits<char> > &) const
-: [00:27:42]   Dynamic exception type: class boost::exception_detail::clone_impl<class dogen::yarn::json::hydration_error>
-: [00:27:42]   std::exception::what: Failed to parse JSON file<unspecified file>(1): expected value
-: [00:27:42] unknown location : fatal error : in "hydrator_tests/cpp_std_model_hydrates_into_expected_model": class std::runtime_error: Error during test [C:\projects\dogen\build\output\projects\yarn.json\tests\run_yarn.json.tests.vcxproj]
-: [00:27:42]   C:\projects\dogen\projects\yarn.json\tests\hydrator_tests.cpp(386): last checkpoint: cpp_std_model_hydrates_into_expected_model
-
-Yarn:
-
-: [00:27:42] C:/projects/dogen/projects/utility/include/dogen/utility/test/hash_tester.hpp(57): error : in "hashing_tests/validate_hashing": check hasher(a) == hasher(b) has failed [C:\projects\dogen\build\output\projects\yarn\tests\run_yarn.tests.vcxproj]
-: [00:27:42] C:/projects/dogen/projects/utility/include/dogen/utility/test/hash_tester.hpp(57): error : in "hashing_tests/validate_hashing": check hasher(a) == hasher(b) has failed [C:\projects\dogen\build\output\projects\yarn\tests\run_yarn.tests.vcxproj]
-: [00:27:42] C:/projects/dogen/projects/utility/include/dogen/utility/test/hash_tester.hpp(57): error : in "hashing_tests/validate_hashing": check hasher(a) == hasher(b) has failed [C:\projects\dogen\build\output\projects\yarn\tests\run_yarn.tests.vcxproj]
-: [00:27:44]
-: [00:27:44]   *** 3 failures are detected in the test module "yarn_tests"
-
-Utility:
-
-:  Building Custom Rule C:/projects/dogen/projects/utility/tests/CMakeLists.txt
-:  CMake does not need to re-run because C:\projects\dogen\build\output\msvc\Debug\projects\utility\tests\CMakeFiles\generate.stamp is up-to-date.
-:  Running utility.tests
-: C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.CppCommon.targets(171,5): error MSB6006: "cmd.exe" exited with code -1073741515. [C:\projects\dogen\build\output\msvc\Debug\projects\utility\tests\run_utility.tests.vcxproj]
-: Done Building Project "C:\projects\dogen\build\output\msvc\Debug\projects\utility\tests\run_utility.tests.vcxproj" (default targets) -- FAILED.
-: Done Building Project "C:\projects\dogen\build\output\msvc\Debug\run_windows_green_tests.vcxproj" (default targets) -- FAILED.
-: Build FAILED.
-: "C:\projects\dogen\build\output\msvc\Debug\run_windows_green_tests.vcxproj" (default target) (1) ->
-
-*** Fix the dynamic linker errors in OSX when running tests           :story:
-
-At present we are building for OSX but not running the tests. Most of
-the tests should actually pass, if only we could run them. The problem
-is that DYLD_LIBRARY_PATH is not being supplied to make, resulting in
-dynamic linker errors:
-
-: dyld: Library not loaded: /Users/marco/Development/local/lib/libxml2.2.dylib
-:  Referenced from: /Users/travis/build/DomainDrivenConsulting/dogen/build/output/clang/Release/stage/bin/dogen.utility.tests
-:  Reason: Incompatible library version: dogen.utility.tests requires version 12.0.0 or later, but libxml2.2.dylib provides version 10.0.0
-: /bin/sh: line 1:  1692 Trace/BPT trap: 5       /Users/travis/build/DomainDrivenConsulting/dogen/build/output/clang/Release/stage/bin/dogen.utility.tests
-
-We tried both =DYLD_LIBRARY_PATH= and =DYLD_FALLBACK_LIBRARY_PATH=.
-If we do run the tests manually inside the main script we get the
-linking to work, as proved in [[https://travis-ci.org/DomainDrivenConsulting/dogen/jobs/164335824][this build]].
-
-- [[https://forums.developer.apple.com/thread/9233][DYLD_LIBRARY_PATH and make]]: according to this article, fallback
-  should have fixed the problem but didn't.
 
 *** Add scripts to sanity check packages                               :epic:
 
@@ -10534,23 +10357,9 @@ See also main CMakeLists.txt around =6b837334c3247bee2f6be8099cd5288a284fa36c=.
 
 Or is the best practice that the user should choose how to link
 against boost in the same way it chooses to generate static or dynamic
-libraries internally for Dogen?
-
-*** Check that custom targets in CMake have correct dependencies      :story:
-
-At present we have a number of custom targets, which create a new Make
-target. These are good because they do not require re-running CMake to
-manage the files in the output directory; however, we do not have the
-correct dependencies between the targets and the target
-dependencies. For example, create_scripts should check to see if any
-script has changed before re-generating the tarball; it seems to have
-no dependencies so it will always regenerate the tarball. We need to:
-
-- check all custom targets and see what their current behaviour is:
-  a) change a dependency and rebuild the target and see if the
-  change is picked up or not; b) change no dependencies and re-run the
-  target and ensure that nothing happens.
-- add dependencies as required.
+libraries internally for Dogen? This seems like a better approach; we
+could just add parameters to our shell scripts that build statically
+for the build machine.
 
 *** Enable doxygen warnings for all undocumented code                 :story:
 
@@ -10677,12 +10486,6 @@ build time. See other story:
 
 - Allow user to choose whether to build shared or static libraries
 
-*** Allow generating executables from dogen                           :story:
-
-At present dogen always assumes we want to generate a static
-library. It would be nice to be able to generate an executable too,
-with all of the cmake infrastructure generated.
-
 *** Migrate from Boost Test to Catch                                  :story:
 
 The [[https://github.com/philsquared/Catch][Catch]] testing framework appears to be very nice:
@@ -10709,43 +10512,6 @@ should consider making it explicit.
 
 The best approach may be to move all unit tests to [[https://github.com/philsquared/Catch][Catch]], since it
 natively supports GWT.
-
-*** Enable package installation tests for Linux                        :epic:
-
-Now that we will be using docker, we could create a simple =systemd=
-ctest script that runs as root in a docker container:
-
-- build package and drop them on a well known location;
-- Create a batch script that polls this location for new packages;
-  when one is found run package installer. Looks for files that match
-  a given regular expression (e.g. we need to make sure we match the
-  bitness and the platform)
-- if it finds one, it installs it and runs sanity scripts (see story
-  for sanity scripts).
-- it then uninstalls it and makes sure the docker image is identical
-  to how we started (however that is done in docker)
-
-*** Add support for uploading packages in cloud storage               :story:
-
-We need to upload the packages created by each build to a public
-Google Drive (GDrive) location or to DropBox
-
-- Google drive folder created [[https://drive.google.com/folderview?id%3D0B4sIAJ9bC4XecFBOTE1LZEpINUE&usp%3Dsharing][here]].
-- See [[https://developers.google.com/drive/quickstart-ruby][this article]].
-- [[http://stackoverflow.com/questions/15798141/create-folder-in-google-drive-with-google-drive-ruby-gem][Create folders]] to represent the different types of uploads:
-  =tag_x.y.z=, =last=, =previous=. maybe we should only have latest
-  and tag as this would require no complex logic: if tag create new
-  folder, if latest, delete then create.
-
-We are uploading the tag packages to GitHub already, but ideally we
-should test all packages for all commits.
-
-*** Add Travis support for 32-bits                                    :story:
-
-It seems its fairly straightforward to add 32-bit support to Travis,
-as per RapidJSON:
-
-https://github.com/miloyip/rapidjson/blob/master/.travis.yml
 
 *** Add a GitHub page for Dogen                                       :story:
 
@@ -10820,57 +10586,6 @@ https://github.com/Reactive-Extensions/RxCpp
 
 We should push both the C++ libraries as well as the dogen binary.
 
-*** Travis deployment of tags fails                                   :story:
-
-As per [[https://github.com/travis-ci/travis-ci/issues/2577][issue 2577]] in travis, it does not support wildcards at the
-moment. We need to find another way to upload packages into GitHub
-without using wildcards.
-
-Error:
-
-: dpl.1
-: Installing deploy dependencies
-: Fetching: addressable-2.3.6.gem (100%)
-: Successfully installed addressable-2.3.6
-: Fetching: multipart-post-2.0.0.gem (100%)
-: Successfully installed multipart-post-2.0.0
-: Fetching: faraday-0.9.0.gem (100%)
-: Successfully installed faraday-0.9.0
-: Fetching: sawyer-0.5.5.gem (100%)
-: Successfully installed sawyer-0.5.5
-: Fetching: octokit-3.5.2.gem (100%)
-: Successfully installed octokit-3.5.2
-: 5 gems installed
-: Fetching: mime-types-2.4.3.gem (100%)
-: Successfully installed mime-types-2.4.3
-: 1 gem installed
-: error: could not lock config file .git/config: No such file or directory
-: error: could not lock config file .git/config: No such file or directory
-: dpl.2
-: Preparing deploy
-: Logged in as Marco Craveiro
-: Deploying to repo: DomainDrivenConsulting/dogen
-: Current tag is: v0.56.2767
-: dpl.3
-: Deploying application
-: /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/octokit-3.5.2/lib/octokit/client/releases.rb:86:in `initialize': No such file or directory - stage/pkg/*.deb (Errno::ENOENT)
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/octokit-3.5.2/lib/octokit/client/releases.rb:86:in `new'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/octokit-3.5.2/lib/octokit/client/releases.rb:86:in `upload_asset'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/provider/releases.rb:118:in `block in push_app'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/provider/releases.rb:102:in `each'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/provider/releases.rb:102:in `push_app'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/provider.rb:122:in `block in deploy'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/cli.rb:41:in `fold'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/provider.rb:122:in `deploy'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/cli.rb:32:in `run'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/lib/dpl/cli.rb:7:in `run'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/gems/dpl-1.7.6/bin/dpl:5:in `<top (required)>'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/bin/dpl:23:in `load'
-:     from /home/travis/.rvm/gems/ruby-1.9.3-p550/bin/dpl:23:in `<main>'
-: failed to deploy
-
-We solved this for now by just uploading the application packages.
-
 *** Consider hosting documentation in read the docs                   :story:
 
 We should consider hosting the documentation here:
@@ -10878,22 +10593,6 @@ We should consider hosting the documentation here:
 - https://readthedocs.org/
 
 This probably means we need to move to Mark Down.
-
-*** Create a demo of installing dogen and generating hello world      :story:
-
-#+begin_quote
-*Story*: As a dogen user, I want basic instructions on using the
-program so that I don't have to figure it all out by myself.
-#+end_quote
-
-We need to start creating a series of quick videos demoing dogen. The
-script for the first video of the series is as follows:
-
-- download packages from GitHub and install them.
-- obtain the hello world model from git.
-- generate the hello world model.
-- create a hello world main with make files and compile it.
-- give a quick overview of the available facilities.
 
 *** Consider adding support for clang-tidy                            :story:
 
@@ -13205,6 +12904,22 @@ Notes:
 ** Other Stories
 
 Stories we just don't quite know where to bucket them.
+
+*** Create a demo of installing dogen and generating hello world      :story:
+
+#+begin_quote
+*Story*: As a dogen user, I want basic instructions on using the
+program so that I don't have to figure it all out by myself.
+#+end_quote
+
+We need to start creating a series of quick videos demoing dogen. The
+script for the first video of the series is as follows:
+
+- download packages from GitHub and install them.
+- obtain the hello world model from git.
+- generate the hello world model.
+- create a hello world main with make files and compile it.
+- give a quick overview of the available facilities.
 
 *** Test data extensions are not ideal                                :story:
 
