--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,24 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-17 Sun 07:25]
+#+CAPTION: Clock summary at [2019-03-17 Sun 18:04]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *42:42* |       |       | 100.0 |
+| *Total time*                                             | *43:43* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 42:42   |       |       | 100.0 |
-| Active                                                   |         | 42:42 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   5.5 |
-| Sprint and product backlog grooming                      |         |       |  5:13 |  12.2 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   8.9 |
+| Stories                                                  | 43:43   |       |       | 100.0 |
+| Active                                                   |         | 43:43 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   5.4 |
+| Sprint and product backlog grooming                      |         |       |  5:13 |  11.9 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   8.7 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.4 |
-| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.8 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  13.5 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  15.1 |
-| Empty directories should be deleted                      |         |       |  5:37 |  13.2 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.7 |
-| Code generation of tests for dogen models                |         |       | 11:27 |  26.8 |
+| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.7 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  13.2 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  14.7 |
+| Empty directories should be deleted                      |         |       |  5:37 |  12.8 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.6 |
+| Code generation of tests for dogen models                |         |       | 12:28 |  28.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -666,6 +666,8 @@ models.
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-17 Sun 17:46]--[2019-03-17 Sun 18:04] =>  0:18
+    CLOCK: [2019-03-17 Sun 17:02]--[2019-03-17 Sun 17:45] =>  0:43
     CLOCK: [2019-03-17 Sun 07:09]--[2019-03-17 Sun 07:25] =>  0:16
     CLOCK: [2019-03-17 Sun 06:40]--[2019-03-17 Sun 06:50] =>  0:10
     CLOCK: [2019-03-16 Sat 21:31]--[2019-03-16 Sat 21:35] =>  0:04
@@ -2386,3 +2388,57 @@ perhaps the way to do it is:
 2. Provide oracle::select_statement::prefetch() to make the
    prepared query approach less tedious.
 #+end_quote
+
+*** CANCELLED Consider using a graph in yarn for indexing and other tasks :story:
+    CLOSED: [2019-03-17 Sun 17:47]
+
+*Rationale*: this is far too complex and would be too brittle.
+
+To keep things simple we created a number of specialised indexers,
+each performing a complete loop, recursion, etc over the merged
+model. A better way of doing things would be to do a DAG of the model
+that includes both concepts and objects and then DFS it; at each
+vertex we could plug in a set of indexers, each acting on the
+vertex. We could also have dependencies between the indexers (for
+example concept indexing must take place before property indexing and
+so on). This could also be extended to the quilt models, provided we
+could express dependencies. We just need a simple interface that any
+indexer can implement. Of course we also have to worry about indexers
+which need to see the intermediate results of other indexers.
+
+In addition, for this to work properly we need to remove all of the
+frontend workflow processing and make these work off of the merged
+model. Property expansion for example could be done by splitting
+modules by model. The good thing about this approach is that we could
+setup the graph in such a way that any type that does not link back to
+the target model can be dropped so we would do very little work for
+these - other than the original front end loading. Its not easy to
+avoid loading models which we will not use because we only know which
+models we need after resolution, and that requires having the model
+loaded.
+
+We did something similar with the consumer interface, which was never
+used. The graph could probably be reused as is. See:
+
+: 5db6524 * sml: remove consumer workflow and associated classes
+
+One possible approach is to use [[http://www.nuget.org/packages/RxCpp/][Rx]]. Each of the indexers is a stream
+which does some processing. Streams are linked to each other based on
+the indexer dependencies, such that we pass on the processed types
+once we are finished with it. They are passed on up all the way to
+quilt indexers. We need to come up with a streams architecture linking
+all indexers. We then use the graph to determine the order in which
+yarn type are being passed in to the stream pipeline.
+
+More thoughts: what we really want is to have a "transfomers" pipeline
+("indexers" seems too limited a name) that is designed to generate the
+inputs for the formatters. This means that by the end of the pipeline
+we end up with properties, settings and the yarn type. And of course
+we could take this one step further and then say that the formatters
+themselves are also in the pipeline and the ultimate result of the
+pipeline is a file.
+
+We should not tackle this task until we have support for a few
+languages other than C++ because we may be hacking things for C++
+which wont work for those languages. It will be much harder to change
+the code once we have a graph + pipeline.
